# claude-code-exterminal-memory

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .review_comment.md  CLAUDE.md  LICENSE  README.md  marketplace.json  pyproject.toml  pytest.ini  requirements.txt  schema.sql
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
commands/: sync_memory.md
docs/: api-specification.md  project-context.md
hooks/: auto_sync_prompt.txt  check_decision.py  check_project_exists.py  check_recent_recording.py  check_topic_exists.py  check_topic_recorded.py  hook_state.py  hook_topic.py  hook_transcript.py  hooks.json  llm_response_parser.py  load-undecided-topics.sh  load_active_context.py  parse_meta_tag.py  pretooluse_hook.py  pretooluse_nudge_record.sh  record_log.py  remind_activity_on_decision.sh  remind_task_on_decision.sh  session_end_hook.py  session_end_hook.sh  session_start_hook.py  stop_enforce_metatag.sh  stop_hook.py  stop_hook.sh  stop_nudge_record.sh  sync_memory.py  test_check_recent_recording.py  test_check_topic_exists.py  test_parse_meta_tag.py  test_record_log.py  utils.py
migrations/: 0001_initial_schema.sql  0002_add_fts5_search.sql  0003_project_to_subject.sql  0004_fix_decisions_update_trigger.sql  0005_add_vec_index.sql  0005_decisions_topic_id_not_null.sql  0006_add_on_delete_cascade.sql  0007_remove_blocked_status.sql  0008_add_log_search_index.sql  0010_remove_subjects.sql  0011_rename_task_to_activity.sql  0012_add_tag_notes.sql  0013_add_materials.sql  0014_intent_namespace.sql  0015_intent_tag_notes.sql  (+19 more)
src/: base.py  (+8 more)
(+143 files in other folders)
