[project]
name = "claude-code-memory"
version = "0.1.0"
description = "Claude Codeの作業記録をDBに保存し、複数のClaude Codeエージェント間で協調作業を可能にするシステム"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pytest>=7.4.0",
    "pyyaml>=6.0",
    "yoyo-migrations",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
