[project]
name = "claude-code-memory"
version = "0.1.0"
description = "Claude Codeの作業記録をDBに保存し、複数のClaude Codeエージェント間で協調作業を可能にするシステム"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pytest>=7.4.0",
    "pyyaml>=6.0",
    "sentence-transformers",
    "sqlite-vec>=0.1.6,<0.2",
    "yoyo-migrations>=9,<10",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
