[project]
name = "claude-code-memory"
version = "0.1.0"
description = "Claude Codeの記憶を外部DBに保存し、セッション間で知識・決定事項・アクティビティを永続化する"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.0,<4",
    "pyyaml>=6.0",
    "sentence-transformers>=5,<6",
    "sqlite-vec>=0.1.6,<0.2",
    "yoyo-migrations>=9,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
